@@ -10,6 +10,10 @@ unsigned char our_text_end[0]
 unsigned char our_rodata_end[0]
     __asm("_.innocent_pear.rodata.end")
     __attribute__((section(".rodata.zzzzzzzzzzzzzzzzzzzzzzzz")));
+unsigned char our_relro_end[0]
+    __asm("_.innocent_pear.relro.end")
+    __attribute__((section(".gnu.linkonce.d.rel.ro."
+			   "zzzzzzzzzzzzzzzzzzzzzzzz")));
 unsigned char our_data_end[0]
     __asm("_.innocent_pear.data.end")
     __attribute__((section(".data.zzzzzzzzzzzzzzzzzzzzzzzz")));
